<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_terdaftar">Terdaftar</string>
    <string name="card_pelanggan_nama_pelanggan">Nama Pelanggan</string>
    <string name="card_pelanggan_nohp">No Hp</string>
    <string name="card_pelanggan_alamat">Alamat</string>
    <string name="card_pelanggan_blihat">Lihat</string>
    <string name="card_pelanggan_bhubungi">Hubungi</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="card_cabang">Cabang</string>
    <string name="tvtambah_pelanggan">Tambah Pelanggan</string>
    <string name="tv_nama_lengkap">Nama Lengkap</string>
    <string name="tv_no_hp_aktif">No Hp Aktif</string>
    <string name="bsimpan">Simpan</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="tv_tambah_pegawai">Tambah Pegawai</string>
    <string name="card_tambahan_namalayanan">Nama Layanan Tambahan</string>
    <string name="card_tambahan_harga">Harga</string>
    <string name="card_tambahan_namacabang">Nama Cabang</string>
    <string name="card_tambahan_status">Status</string>
    <string name="tvedit">Edit</string>
    <string name="tvtambah_layanan_tambahan">Tambah Layanan Tambahan</string>
    <string name="card_pegawai_jeniskelamin">Jenis Kelamin</string>
    <string name="card_pegawai_ttl">Tempat, Tanggal Lahir</string>
    <string name="card_layanan_namalayanan">Nama Layanan</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="tvestimasi_hari_ini">Estimasi hari ini</string>
    <string name="tv_transaksi">Transaksi</string>
    <string name="tv_pelanggan">Pelanggan</string>
    <string name="tv_laporan">Laporan</string>
    <string name="tv_siapmelayanipelanggan">Siap Melayani Pelanggan dengan Setulus Hati</string>
    <string name="tv_jangankecewakanpelanggan">Jangan Kecewakan Pelanggan</string>
    <string name="tv_akun">Akun</string>
    <string name="tv_layanan">Layanan</string>
    <string name="tv_tambahan">Tambahan</string>
    <string name="tv_pegawai">Pegawai</string>
    <string name="tv_cabang">Cabang</string>
    <string name="tv_printer">Printer</string>
    <string name="tv_main_selamat">Selamat Pagi, -!</string>
    <string name="sukses_simpan_pelanggan">Data pelanggan berhasil disimpan!</string>
    <string name="gagal_simpan_pelanggan">Gagal menyimpan data pelanggan!</string>
    <string name="card_pegawai_alamat">Alamat</string>
    <string name="sukses_simpan_pegawai">Data pegawai berhasil disimpan!</string>
    <string name="gagal_simpan_pegawai">Gagal menyimpan data pegawai!</string>
    <string name="card_pegawai_terdaftar">Terdaftar</string>
    <string name="card_pegawai_bhubungi">Hubungi</string>
    <string name="card_pegawai_blihat">Lihat</string>
    <string name="card_pegawai_nohp">No Hp</string>
    <string name="card_layanan_harga">Harga</string>
    <string name="sukses_simpan_layanan">Data layanan berhasil disimpan!</string>
    <string name="gagal_simpan_layanan">Gagal menyimpan data layanan!</string>
    <string name="card_tambah_layanan">Tambah Layanan</string>
    <string name="card_harga_layanan">Harga Layanan</string>
    <string name="tvAlamatCabang">Alamat Cabang</string>
    <string name="tvNoHpCabang">No Hp Cabang</string>
    <string name="tvManagerCabang">Manager Cabang</string>
    <string name="tvTambahCabang">Tambah Cabang</string>
    <string name="greeting_morning">Selamat pagi,</string>
    <string name="greeting_afternoon">Selamat siang,</string>
    <string name="greeting_evening">Selamat sore,</string>
    <string name="greeting_night">Selamat malam,</string>
    <string name="sukses_simpan_cabang">Data cabang berhasil disimpan!</string>
    <string name="gagal_simpan_cabang">Gagal menyimpan data cabang!</string>
    <string name="sukses_simpan_tambahan">Data layanan tambahan berhasil disimpan!</string>
    <string name="gagal_simpan_tambahan">Gagal menyimpan data layanan tambahan!</string>
    <string name="detail_pelanggan">Detail Pelanggan</string>
    <string name="sunting">Sunting</string>
    <string name="tv_hapus">Hapus</string>
    <string name="tvTambahLayanan">Tambah Layanan</string>
    <string name="tvTambahTambahan">Tambah Layanan Tambahan</string>
    <string name="gagal_simpan_layanantambahan">Gagal menyimpan data layanan tambahan!</string>
    <string name="sukses_simpan_layanantambahan">Data layanan tambahan berhasil disimpan!</string>
    <string name="nama">Nama</string>
    <string name="informasi">Informasi</string>
    <string name="katasandi">Kata Sandi</string>
    <string name="nomortelepon">Nomor Telepon</string>
    <string name="preferensi">Preferensi</string>
    <string name="keluar">Keluar</string>
    <string name="totalbayar">Total Bayar</string>
    <string name="konfirmasidata">Konfirmasi Data</string>
    <string name="layanantambahann">Layanan Tambahan</string>
    <string name="batal">Batal</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="selamatdatangkembali">Selamat Datang Kembali</string>
    <string name="masukkannomor_login">Masukkan nomor telepon dan kata sandi yang valid untuk melanjutkan.</string>
    <string name="belummemilikiakun">Belum memiliki akun?</string>
    <string name="masuk">Masuk</string>
    <string name="id_transaksi">ID Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="pesanan">Pesanan</string>
    <string name="karyawan">Karyawan</string>
    <string name="namalayanan">Nama Layanan</string>
    <string name="rincian_tambahan">Rincian Tambahan</string>
    <string name="harga_layanan">Harga Layanan</string>
    <string name="subtotal_tambahan">Subtotal Tambahan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="kirim_whatsapp">Kirim Whatsapp</string>
    <string name="cetak">Cetak</string>
    <string name="caridatalayanan">Cari Data Layanan</string>
    <string name="caridatapelanggan">Cari Data Pelanggan</string>
    <string name="caridatalayanantambahan">Cari Data Layanan Tambahan</string>
    <string name="mulaisekarang">Mulai Sekarang</string>
    <string name="gunakaninformasi">Gunakan informasi yang tepat untuk melanjutkan.</string>
    <string name="role">Peran</string>
    <string name="daftarsekarang">Daftar Sekarang</string>
    <string name="datapelanggan">Data Pelanggan</string>
    <string name="pilihpelanggan">Pilih Pelanggan</string>
    <string name="layananutama">Layanan Utama</string>
    <string name="pilihlayanan">Pilih Layanan</string>
    <string name="layanantambahan">Layanan Tambahan</string>
    <string name="tambahan">Tambahan</string>
    <string name="proses">Proses</string>
    <string name="idcabang">ID Cabang</string>
    <string name="idlaporan">ID Laporan</string>
    <string name="idlayanan">ID Layanan</string>
    <string name="idpegawai">ID Pegawai</string>
    <string name="idpelanggan">ID Pelanggan</string>
    <string name="idtambahan">ID Tambahan</string>
    <string name="detailcabang">Detail Cabang</string>
    <string name="namapegawai">Nama Pegawai</string>
    <string name="pilihmetodepembayaran">Pilih Metode Pembayaran</string>
    <string name="bayarnanti">Bayar Nanti</string>
    <string name="tunai">Tunai</string>
    <string name="sudahmemilikiakun">Sudah memiliki akun?</string>
    <string name="perbarui">Perbarui</string>
    <string name="simpan">Simpan</string>
    <string name="editlayanantambahan">Edit Layanan Tambahan</string>
    <string name="edittambahan">Edit Tambahan</string>
    <string name="editlayanan">Edit Layanan</string>
    <string name="card_cabangg">Cabang: %s</string>
    <string name="card_harga">Harga: Rp. %s</string>
    <string name="card_alamat">Alamat: %s</string>
    <string name="card_nohp">No Hp: %s</string>
    <string name="card_terdaftar">Terdaftar: %s</string>
    <string name="editpegawai">Edit Pegawai</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="konfirmasi_hapuspelanggan">Apakah anda yakin ingin menghapus pelanggan ini?</string>
    <string name="databerhasildihapus">Data telah berhasil dihapus</string>
    <string name="idtidakvalid">ID tidak valid!</string>
    <string name="gagalhapus">Gagal menghapus data yang anda pilih</string>
    <string name="konfirmasihapuspegawai">Apakah anda yakin ingin menghapus pegawai ini?</string>
    <string name="detailpegawai">Detail Pegawai</string>
    <string name="detailtambahan">Detail Tambahan</string>
    <string name="editcabang">Edit Cabang</string>
    <string name="konfirmasi_hapuscabang">Apakah anda yakin ingin menghapus cabang ini?</string>
    <string name="konfirmasi_hapustambahan">Apakah anda yakin ingin menghapus layanan tambahan ini?</string>
    <string name="card_namapelanggan">Nama Pelanggan: %1$s</string>
    <string name="nohp">No Hp: %1$s</string>
    <string name="card_namalayanan">Nama Layanan: %1$s</string>
    <string name="card_hargaa">Harga: %1$s</string>
    <string name="tvNamapelanggan_titikdua">Nama Pelanggan:</string>
    <string name="tvNoHp_titikdua">No HP:</string>
    <string name="tvNamalayanan_titikdua">Nama Layanan:</string>
    <string name="tvHarga_titikdua">Harga:</string>
    <string name="alamat_titikdua">Alamat:</string>
    <string name="toast_transaksiberhasil">Transaksi berhasil disimpan</string>
    <string name="toast_transaksigagal">Gagal menyimpan transaksi</string>
    <string name="toast_errordata">Error memuat data: %1$s</string>
    <string name="validas_loginhrsdiisi">Nomor telepon dan kata sandi harus diisi!</string>
    <string name="loginberhasil">Login berhasil</string>
    <string name="katasandisalah">Kata sandi salah</string>
    <string name="nomortidakterdaftar">Nomor telepon tidak terdaftar</string>
    <string name="gagallogin">Gagal login</string>
    <string name="pendaftaranberhasil">Pendaftaran berhasil</string>
    <string name="gagalmendaftar">Pendaftaran gagal</string>
    <string name="gagalmemeriksanotelepon">Gagal memeriksa nomor telepon</string>
    <string name="status_done">Selesai</string>
    <string name="status_unpaid">Belum Dibayar</string>
    <string name="status_paid">Sudah Dibayar</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="pickup_now">Ambil Sekarang</string>
    <string name="no_additional_services">Tidak ada layanan tambahan</string>
    <string name="pembayaranberhasil_toast">Pembayaran berhasil</string>
    <string name="gagalmemperbaruistatus_toast">Gagal memperbarui status</string>
    <string name="statusorderdiperbarui_toast">Status order berhasil diperbarui</string>
    <string name="toast_fieldkosong">Semua field harus diisi!</string>
    <string name="toast_nohp_invalid">Nomor telepon hanya boleh berisi angka!</string>
    <string name="profilberhasildisimpan">Profil berhasil diperbarui</string>
    <string name="gagalmemperbaruiprofil">Gagal memperbarui profil</string>
    <string name="datapenggunatidakditemukan">Data pengguna tidak ditemukan</string>
    <string name="tvlayanantambahan">Layanan Tambahan</string>
    <string name="diambilpada">Diambil Pada</string>
    <string name="silakanpilihpelanggan">Silakan Pilih Pelanggan Terlebih Dahulu</string>
    <string name="silakanpilihlayanan">Silakan Pilih Layanan Terlebih Dahulu</string>
    <string name="batalpilihpelanggan">Batal memilih pelanggan</string>
    <string name="batalpilihlayanan">Batal memilih layanan</string>
    <string name="masukkanpassword">Masukkan Password</string>
</resources>