<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvmasukkanpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkanpassword"
        android:textColor="@color/blackwhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/etAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/katasandi"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textColorHint="#bbbbbb"
            android:background="@drawable/border_editor" />

        <ImageView
            android:id="@+id/ivToggleAdminPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/eye"
            android:contentDescription="Toggle Password Visibility" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:textColor="@color/white"
            android:backgroundTint="#FF3D00"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/button"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"/>

    </LinearLayout>

</LinearLayout>